Publication author organization spacing fix attempt

--- a/src/app/component/single/single-publication/single-publication.component.scss
+++ b/src/app/component/single/single-publication/single-publication.component.scss
@@ -57,3 +57,11 @@
     line-height: 40px;
     font-size: 1rem;
 }
+
+.show-more-wrapper {
+    position: absolute;
+}
+
+.auth-min-height {
+    min-height: 100px;
+}
